--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "highlight.js": "^9.12.0",
     "vue": "^2.5.16",
-    "vue-router": "^3.0.1",
-    "vuetify": "^1.0.19"
+    "vue-highlightjs": "^1.3.3",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.0.0-beta.49",
@@ -19,11 +20,10 @@
     "@vue/cli-service": "^3.0.0-beta.15",
     "@vue/eslint-config-prettier": "^3.0.0-rc.3",
     "babel-plugin-transform-imports": "^1.4.1",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.9.2",
     "sass-loader": "^7.0.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
-    "vue-cli-plugin-vuetify": "^0.1.6",
     "vue-template-compiler": "^2.5.16"
   },
   "eslintConfig": {
@@ -47,7 +47,7 @@
   },
   "browserslist": [
     "> 1%",
-    "last 2 versions",
+    "last 6 versions",
     "not ie <= 8"
   ]
 }
